# mmu-hdf-to-hats

./: .gitignore  CLAUDE.md  COPYING  README.md  TEST_DATA_SAMPLES.md  TRANSFORMER_STATUS.md  add_hero_figures.py  build-manga.sbatch  generate_readme.py  main.py  pyproject.toml  run_mmu_conversions.sh  verify.py
cards/: dataset_card_mmu_csp.md  dataset_card_mmu_des_y3_sne_ia.md  dataset_card_mmu_desi_provabgs.md  dataset_card_mmu_ps1_sne_ia.md  dataset_card_mmu_yse.md
catalog_download_scripts/: chandra.py  csp.py  des_y3_sne_ia.py  gaia.py  gz10.py  jwst.py  manga.py  plasticc.py  ps1_sne_ia.py  snls.py  ssl_legacysurvey.py  start.py  vipers.py  yse.py
catalog_functions/: btsbot_transformer.py  cfa_transformer.py  chandra_transformer.py  csp_transformer.py  des_y3_sne_ia_transformer.py  desi_provabgs_transformer.py  desi_transformer.py  readers.py  (+17 more)
mmu-to-hats/: README.md  catalog_expected_columns.py  main.py  pyproject.toml  verify.py
mmu-to-hats/catalog_download_scripts/: btsbot.py  cfa.py  desi.py  desi_provabgs.py  foundation.py  gaia.py  gui.py  hsc.py  legacysurvey.py  start.py  swift_sne_ia.py  tess.py
mmu-to-hats/catalog_functions/: base_transformer.py  btsbot_transformer.py  cfa_transformer.py  csp_transformer.py  des_y3_sne_ia_transformer.py  desi_provabgs_transformer.py  desi_transformer.py  foundation_transformer.py  gaia_transformer.py  gz10_transformer.py  hsc_transformer.py  jwst_transformer.py  legacysurvey_transformer.py  manga_transformer.py  plasticc_transformer.py  ps1_sne_ia_transformer.py  sdss.py  sdss_transformer.py  snls_transformer.py  ssl_legacysurvey_transformer.py  swift_sne_ia_transformer.py  tess_transformer.py  utils.py  vipers_transformer.py  yse_transformer.py
mmu-to-hats/tests/: test_compare.py
mmu-to-hats/transform_scripts/: transform_btsbot_to_parquet.py  transform_gaia_to_parquet.py  transform_vipers_to_parquet.py
mmu-to-hats/verification/: compare.py  download_data.sh  download_sdss.sh  download_vipers.sh  download_yse.sh  process_gaia_using_datasets.py  process_sdss_using_datasets.py  process_swift_sne_ia_using_datasets.py  process_tess_using_datasets.py  process_using_transform_method.py  process_vipers_using_datasets.py  process_yse_using_datasets.py  requirements.in  sdss_transformer.py  validate_columns.py
(+131 files in other folders)
