[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mmu"
authors = [
    {name = "Multimodal Universe Collaboration"},
]
description = "Large Astronomical Dataset for Foundation Models"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "astropy>=7.1.1",
    "datasets==3.6.0",
    "h5py>=3.15.1",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["mmu"]

[tool.setuptools_scm]
write_to = "mmu/_version.py"

[project.scripts]
mmu_cli = "mmu.benchmark.trainer:trainer_cli"
