[project]
name = "mmu-to-hats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask[distributed,diagnostics]",
    "hats-import>=0.9",
    "h5py",
    "huggingface_hub",
    "numpy",
    "pyarrow",
    "universal_pathlib",
    "click",
    "datasets",
    "healpy>=1.19.0",
]

# add dev dependencies
[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["catalog_functions*", "verification*", "mmu*"]
